--- a/assets/style.css
+++ b/assets/style.css
@@ -35,7 +35,7 @@ body {
 
 .nav a {
 	text-decoration: none;
-	color: #000
+	color: #000;
 }
 
 .social-link img {
@@ -44,7 +44,7 @@ body {
 
 #about {
 	display: flex;
-	background-color: #F6D2B8;
+	background-color: #f6d2b8;
 	padding-inline: 100px;
 	padding-block: 100px;
 	position: relative;
@@ -72,15 +72,15 @@ body {
 
 }
 #about-me {
-	flex: 2
+	flex: 2;
 }
 .about-me__title {
 	margin-top: 1em;
 	margin-bottom: 60px;
 	font-size: 30px;
 }
-.about-me__introduction {
-	font-family: 'Spectral';
+#about-me .about-me__introduction {
+	font-family: "Spectral";
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
@@ -90,9 +90,6 @@ body {
 	font-size: 14px;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
-}
 .title{
 	text-align: center;
 	padding-block: 2em;
@@ -100,11 +97,23 @@ body {
 .gallery .nav {
 	justify-content: center;
 }
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
-	background-color: #BEB45A;
-	border-radius:0 ;
-}
+
+/*
+ Ajout d'un pointer sur les filtres de la gallerie
+*/
+
+.gallery .nav .nav-item {
+	cursor: pointer;
+	}
+	.nav-pills .nav-link.active,
+	.nav-pills .show > .nav-link {
+	color: #000;
+	background-color: #beb45a;
+	border-radius: 0;
+	}
+
+
+
 .nav-pills .nav-link {
 	color: #000
 }
@@ -119,14 +128,19 @@ body {
 	padding-bottom: 100%;
 
 }
+
+/*Ajout du pointer sur les images de la gallerie*/
+
 .gallery-item {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	padding: .5em;
+	cursor: pointer;
 }
-.mg-prev, .mg-next {
+.mg-prev,
+.mg-next {
 	width: 30px;
 	height: 30px;
 	border-radius: 00%;
@@ -136,21 +150,25 @@ body {
 	font-size: 24px;
 }
 
+/*Ajout de Font family Spectral*/
+
 .quote {
 	font-family: 'Spectral';
 	font-style: italic;
 	width: 70%;
 	margin: auto;
 	padding-block: 3em;
+	font-family: "Spectral";
 }
 .quote__text {
-	font-family: Spectral;
+	font-family: "Spectral";
 	font-style: italic;
 	font-weight: 300;
+	font-size: x-large;
 
 }
 .quote__author {
-	font-family: Spectral;
+	font-family: "Spectral";
 	font-weight: 800;
 	font-size: 22px;
 }
@@ -160,7 +178,7 @@ body {
 	background-color: #A8D5D8 ;
 	position: relative;
 }
-#services .container::before{
+#services .container::before {
 	content: ' ';
 	background-color: #1C6474;
 	position: absolute;
@@ -174,7 +192,7 @@ body {
 #services .container {
 	justify-content: space-between;
 	display: flex;
-	padding : 2em 0;
+	padding: 2em 0;
 
 }
 
@@ -192,7 +210,7 @@ body {
 
 #contact {
 	margin: auto;
-	background-color: #D8D3A8 ;
+	background-color: #D8D3A8;
 	position: relative;
 	padding-inline: 100px;
 	padding-block: 100px;
@@ -212,7 +230,7 @@ body {
 	z-index: -1;
 }
 .form-container {
-	flex : 2;
+	flex: 2;
 
 }
 form {
@@ -220,6 +238,10 @@ form {
 	flex-direction: column;
 	width: 70%;
 	align-items: flex-start;
+}
+
+.form-container h2{
+	font-size: 30px;
 }
 
 form input {
@@ -246,9 +268,10 @@ input[type="submit"] {
 
 @media all and (max-width: 1180px) {
 	.picture {
-		flex : 2;
+		flex: 2;
 	}
-	#about, #contact .container {
+	#about, 
+	#contact .container {
 		align-items: center;
 	}
 	.about-me__title {
@@ -277,7 +300,7 @@ input[type="submit"] {
 		left: 0;
 		z-index: -1;
 	}
-	.about-me__title{
+	.about-me__title {
 		text-align: center;
 		margin-top: 1em;
 	}
@@ -290,11 +313,11 @@ input[type="submit"] {
 		height: auto;
 		margin: 2em 0
 	}
-	.service__description{
+	.service__description {
 		margin-bottom: 1em;
 	}
 
-	#services .container::before{
+	#services .container::before {
 		width: 30%;
 		height: 100%;
 		bottom: 0;
@@ -324,7 +347,8 @@ input[type="submit"] {
 		flex-direction: column;
 		padding-inline: 0;
 	}
-	.top-header .nav, .top-header .nav ul {
+	.top-header .nav, 
+	.top-header .nav ul {
 		width: 100%;
 		padding: 0 0 0 0;
 	}
@@ -333,7 +357,8 @@ input[type="submit"] {
 		padding-block: 1em;
 		text-align: center;
 	}
-	.picture.left::before, .picture.right::before {
+	.picture.left::before, 
+	.picture.right::before {
 		height: 150px;
 	}
 	#services .container {
@@ -342,7 +367,8 @@ input[type="submit"] {
 	.service {
 		max-width: 90%;
 	}
-	#about, #contact {
+	#about, 
+	#contact {
 		padding-inline: 2em;
 		padding-block: 2em;
 	}
@@ -353,4 +379,11 @@ input[type="submit"] {
 		width: 80%;
 	}
 }
+
+
+@media all and (max-width: 400px) {
+	.nav a {
+	font-size: 10px;
+	}
+	}
 
